# cuer

./: .gitignore  README.md  makepo.sh  meson.build  meson_options.txt  net.kirgroup.Cuer.json  org.gnome.Cuer.json
data/: meson.build  net.kirgroup.Cuer.appdata.xml.in  net.kirgroup.Cuer.desktop.in  net.kirgroup.Cuer.gschema.xml  net.kirgroup.Cuer.metainfo.xml.in  org.gnome.Cuer.appdata.xml.in  org.gnome.Cuer.desktop.in  org.gnome.Cuer.gschema.xml
data/icons/: icons.gresource.xml  meson.build
po/: LINGUAS  POTFILES  cuer.pot  it.po  meson.build  net.kirgroup.Cuer.pot  nl.po  nl_NL.po
src/: RecentObject.vala  camera.vala  config.vala.in  cuer.gresource.xml  history.ui  history.vala  history_empty.ui  historyempty.vala  main.vala  meson.build  notification_overlay.ui  notification_overlay.vala  window.ui  window.vala
